poke/testsuite/poke.pkl/add-arrays-diag-2.pk
/* { dg-do compile } */

defvar a = [1,2,3] + [3UB + 4UB]; /* { dg-error "invalid operand\n.*" } */
